--- a/devtools/panel/panel.html
+++ b/devtools/panel/panel.html
@@ -329,8 +329,19 @@
       margin-bottom: var(--space-md);
     }
 
+    .panel-header .filter-wrapper {
+      margin: 0;
+      width: 150px;
+      margin-left: var(--space-md);
+    }
+
+    .panel-header .filter-input {
+      padding: 4px 28px 4px 8px;
+      font-size: var(--font-size-sm);
+    }
+
     .panel-title {
-      font-size: var(--font-size-lg);
+      font-size: var(--font-size-md);
       font-weight: 500;
       color: var(--text-primary);
     }
@@ -341,18 +352,24 @@
     }
 
     /* Filter input */
+    .filter-wrapper {
+      position: relative;
+      margin-bottom: var(--space-md);
+    }
+
     .filter-input {
       width: 100%;
       padding: var(--space-sm);
+      padding-right: 28px;
       background: var(--bg-tertiary);
       border: 1px solid var(--border-color);
       border-radius: var(--radius-sm);
       color: var(--text-primary);
       font-size: var(--font-size-md);
       font-family: var(--font-family);
-      margin-bottom: var(--space-md);
       outline: none;
       transition: border-color var(--transition-fast);
+      box-sizing: border-box;
     }
 
     .filter-input:focus {
@@ -361,6 +378,33 @@
 
     .filter-input::placeholder {
       color: var(--text-muted);
+    }
+
+    .filter-clear {
+      position: absolute;
+      right: 6px;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 18px;
+      height: 18px;
+      background: transparent;
+      border: none;
+      color: var(--text-muted);
+      cursor: pointer;
+      padding: 0;
+      font-size: 14px;
+      line-height: 1;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      opacity: 0.6;
+      transition: opacity var(--transition-fast), background var(--transition-fast);
+    }
+
+    .filter-clear:hover {
+      opacity: 1;
+      background: var(--bg-hover);
     }
 
     /* Items list */
@@ -659,10 +703,6 @@
       padding-right: var(--space-md);
     }
 
-    .split-left .panel-header {
-      padding: 0 0 var(--space-sm) 0;
-    }
-
     .split-left .items-list {
       flex: 1;
       overflow-y: auto;
@@ -682,9 +722,9 @@
     }
 
     .split-right {
-      width: 320px;
-      min-width: 200px;
-      max-width: 60%;
+      width: 480px;
+      min-width: 300px;
+      max-width: 95%;
       background: var(--bg-secondary);
       overflow-y: auto;
       display: flex;
@@ -745,13 +785,14 @@
     }
 
     .details-model-link {
-      color: var(--accent-purple) !important;
+      color: var(--accent-cyan) !important;
       font-family: var(--font-mono);
       font-size: var(--font-size-sm);
       cursor: pointer;
     }
 
     .details-model-link:hover {
+      color: var(--accent-blue-hover);
       text-decoration: underline;
     }
 
@@ -779,6 +820,88 @@
       color: var(--text-primary);
       word-break: break-word;
       white-space: pre-wrap;
+    }
+
+    /* Effect source code */
+    .effect-source {
+      font-family: var(--font-mono);
+      font-size: var(--font-size-xs);
+      color: var(--text-secondary);
+      background: var(--bg-tertiary);
+      padding: var(--space-sm);
+      border-radius: var(--radius-sm);
+      overflow-x: auto;
+      white-space: pre-wrap;
+      word-break: break-all;
+      max-height: 200px;
+      overflow-y: auto;
+    }
+
+    /* ========================================================================
+       List Item Styles (for Models, Effects)
+       ======================================================================== */
+    model-item,
+    effect-item {
+      display: block;
+    }
+
+    .list-item {
+      display: flex;
+      align-items: center;
+      gap: var(--space-sm);
+      padding: var(--space-xs) var(--space-sm);
+      cursor: pointer;
+      border-radius: var(--radius-sm);
+      user-select: none;
+    }
+
+    .list-item:hover {
+      background: var(--bg-hover);
+    }
+
+    .list-item.selected {
+      background: var(--bg-selected);
+    }
+
+    .list-item.hot {
+      border-left: 2px solid var(--accent-red);
+    }
+
+    .list-item.warm {
+      border-left: 2px solid var(--accent-orange);
+    }
+
+    .list-item-title {
+      color: var(--accent-purple);
+      font-family: var(--font-mono);
+      font-size: var(--font-size-sm);
+      flex: 1;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+
+    .list-item-type {
+      color: var(--text-muted);
+      font-size: var(--font-size-xs);
+      background: var(--bg-tertiary);
+      padding: 1px 6px;
+      border-radius: var(--radius-sm);
+    }
+
+    .status-dot {
+      width: 6px;
+      height: 6px;
+      border-radius: 50%;
+      flex-shrink: 0;
+    }
+
+    .status-dot.loaded {
+      background: var(--accent-green);
+    }
+
+    .status-dot.not-loaded {
+      background: var(--text-muted);
     }
 
     .value-uri.clickable {
