--- a/devtools/panel/panel.html
+++ b/devtools/panel/panel.html
@@ -1693,30 +1693,28 @@
     .sub-section-header {
       display: flex;
       align-items: center;
-      gap: var(--space-xs);
+      gap: var(--space-sm);
       cursor: pointer;
       user-select: none;
     }
 
-    .sub-section-header:hover {
+    .sub-section-header:hover .sub-section-title {
       color: var(--text-primary);
     }
 
     .sub-toggle {
       font-size: 10px;
       color: var(--text-muted);
-      width: 12px;
     }
 
     .sub-section-title {
-      font-size: 11px;
-      font-weight: 600;
-      color: var(--text-muted);
-      text-transform: uppercase;
+      font-size: var(--font-size-md);
+      font-weight: 500;
+      color: var(--text-secondary);
     }
 
     .sub-section-count {
-      font-size: 10px;
+      font-size: var(--font-size-sm);
       color: var(--text-muted);
     }
 
